--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.11</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.17.2</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
